# deepscribe-evals

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
dashboards/: app.py
data/augmented/: bad_examples.jsonl  bad_examples_scored.jsonl  single_row.jsonl  summac_gold.jsonl  train.jsonl  train_scored.jsonl  train_scored_preview.jsonl  train_scored_retest.jsonl
evalsuite/: __init__.py  config.py  dataset.py
evalsuite/metrics/: bert_score_eval.py  llm_judge.py  registry.py  rouge_eval.py  summac_eval.py
evalsuite/runners/: run_batch.py  run_one.py
scripts/: backfill_judge_baseline.py  build_dataset.py  compute_sumac_gold.py  create_bad_examples.py  eval_batch.sh  eval_one.sh
